# test-web-api-rust

./: Cargo.toml  README.md
graphql_server/: Cargo.toml
graphql_server/src/: lib.rs  schema.rs  server.rs
grpc_book_server/: Cargo.toml
grpc_book_server/src/: lib.rs  main.rs
grpc_hello_server/: Cargo.toml  build.rs
grpc_hello_server/proto/: hello_server.proto
grpc_hello_server/src/: client.rs  server.rs
jsonapi_music_server/: Cargo.toml
jsonapi_music_server/src/: lib.rs
rest_hello_server/: Cargo.toml
rest_hello_server/src/: client.rs  server.rs
src/: lib.rs  main.rs
src/graphql_server/: mod.rs
src/grpc_book_server/: mod.rs
src/jsonapi_music_server/: mod.rs
