[package]
name = "test-web-api-rust"
version = "0.1.0"
authors = ["Toshiyuki Nishiyama Hiraki <take90-it09-easy27@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "3.3.2"
#jsonapi = "0.7.0"
#juniper = "0.15.0"
#tonic = "0.3.1"

[workspace]
members = [
    "graphql_server",
    "grpc_book_server",
    "jsonapi_music_server",
]