[package]
name = "rest-hello-server"
version = "0.1.0"
authors = ["Toshiyuki Nishiyama Hiraki <take90-it09-easy27@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-http = "^2.2.0"
awc = "^2.0.3"
#serde = "^1.0"

[[bin]]
name = "rest-hello-server"
path = "src/server.rs"

[[bin]]
name = "rest-hello-client"
path = "src/client.rs"